# trapper_examples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  imgui.ini
cmake/: AddRuntimeDependencies.cmake  TrexamDownloadExternal.cmake
examples/: CMakeLists.txt
examples/advanced/dlib/: CMakeLists.txt
examples/advanced/embree/: CMakeLists.txt
examples/advanced/mmg/: CMakeLists.txt
examples/advanced/polyscope/: CMakeLists.txt  CMakeLists.txt_old
examples/default/: CMakeLists.txt
examples/default/directional/: CMakeLists.txt  build.sh
examples/default/dlib/: CMakeLists.txt  build.sh
examples/default/eigen/: CMakeLists.txt  build.sh  lib.cpp  main.cpp
examples/default/embree/: CMakeLists.txt  build.sh
examples/default/imgui/: CMakeLists.txt  build.bat  build.sh
examples/default/libzip/: CMakeLists.txt  build.sh
examples/default/libzippp/: CMakeLists.txt  build.bat  build.sh
examples/default/mmg/: CMakeLists.txt  build.bat  build.sh
examples/default/nanoflann/: CMakeLists.txt  build.bat  build.sh  test_main.cpp
examples/default/polyscope/: CMakeLists.txt  build.sh  demo_app.cpp
examples/default/pybind11/: CMakeLists.txt  binder.cp37-win_amd64.pyd  binder.cpp  build.bat  build.sh  main.cpp  main.py  run.py  runner.hpp
scripts/examples/advanced/mmg/: build.bat
scripts/examples/default/mmg/: build.bat
scripts/examples_old/advanced/embree/: build.sh
scripts/examples_old/advanced/mmg/: build.sh
scripts/examples_old/default/mmg/: build.sh
