cmake_minimum_required(VERSION 3.14)

project(trapper_examples)

# list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

# include(Trapper)

set(TRAPPER_BUILD_DEFAULT_EXAMPLES CACHE BOOL OFF)
set(TRAPPER_BUILD_ADVANCED_EXAMPLES CACHE BOOL OFF)

set(TRAPPER_BUILD_MMG_EXAMPLE CACHE BOOL OFF)
set(TRAPPER_BUILD_DLIB_EXAMPLE CACHE BOOL OFF)
set(TRAPPER_BUILD_EMBREE_EXAMPLE CACHE BOOL OFF)
set(TRAPPER_BUILD_POLYSCOPE_EXAMPLE CACHE BOOL OFF)

add_subdirectory(examples)

